--- a/static/style/base.scss
+++ b/static/style/base.scss
@@ -43,6 +43,9 @@ h1,h2,h3,h4,h5,h6{
 	padding:3vw;
 	width:84vw;
 }
+.shadow-box{
+	padding:20upx 0;
+}
 .shadow{
 	box-shadow: 0 2px 20px 0 #e9e9e9;
 }
